fix code wrap in code block

--- a/src/rust/ide/view/src/documentation/style.css
+++ b/src/rust/ide/view/src/documentation/style.css
@@ -316,6 +316,8 @@
 
 .CodeBlock code {
     font-family: "DejaVuSansMonoBook", monospace;
+    width: 100%;
+    overflow-wrap: break-word;
 }
 
 .Def {
